fix: overflow on table header

--- a/public/index.css
+++ b/public/index.css
@@ -227,6 +227,10 @@ td {
   margin: 0.4rem;
 }
 
+thead {
+  overflow: hidden;
+}
+
 .img-ctn {
   height: 7rem;
   width: 7rem;
